--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "paper-kit-2-angular",
+  "name": "PT project",
   "version": "1.3.0",
-  "license": "MIT",
+  "license": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/creativetimofficial/pk2-angular.git"
+    "url": "https://github.com/LukasME/pt_project_frontend.git"
   },
   "scripts": {
     "ng": "ng",
@@ -29,16 +29,20 @@
     "@angular/platform-browser": "9.0.6",
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@types/chart.js": "^2.9.28",
+    "angular-bootstrap-md": "^10.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.1.2",
+    "chart.js": "^2.5.0",
     "core-js": "3.6.4",
+    "hammerjs": "^2.0.8",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
-    "mdbootstrap": "^4.19.1",
     "ng2-nouislider": "1.7.12",
     "nouislider": "9.2.0",
     "popper.js": "1.14.4",
-    "rellax": "^1.12.1",
     "rxjs": "6.5.4",
     "rxjs-compat": "6.5.4",
     "zone.js": "0.10.2"
