--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@types/chart.js": "^2.9.28",
+    "@types/lodash": "^4.14.165",
     "angular-bootstrap-md": "^10.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.1.2",
